test/tests/stages/1_int_constants/invalid_parse/no_semicolon.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[9]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  }
